--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "meteor-reactive-object-map",
-  "version": "1.3.0",
-  "description": "Reactive map helper for meteor blaze templates",
-  "main": "reactive-object-map.js",
+  "name": "reactive-object-map",
+  "version": "0.0.0",
+  "description": "Reactive map powered by Tracker",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:eface2face/meteor-reactive-object-map.git"
+    "url": "git@github.com:piranna/reactive-object-map.git"
   },
   "author": "Sergio Garcia Murillo",
   "contributors": [
@@ -16,9 +16,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/eface2face/meteor-reactive-object-map/issues"
+    "url": "https://github.com/piranna/reactive-object-map/issues"
   },
-  "homepage": "https://github.com/eface2face/meteor-reactive-object-map",
+  "homepage": "https://github.com/piranna/reactive-object-map",
   "dependencies": {
     "meteor-core": "^1.2.8",
     "meteor-tracker": "^1.2.7",
