--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/piranna/reactive-object-map",
   "dependencies": {
-    "meteor-core": "^1.2.8",
+    "lodash": "^3.10.1",
     "meteor-tracker": "^1.2.7",
     "object.observe": "^0.2.4"
   }
