--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Reactive object for Tracker",
   "main": "index.js",
   "scripts": {
-    "test": "node tape test.js"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
